@@ -1,0 +1,61 @@
+class 'Fl::HorValueSlider';
+isa 'Fl::ValueSlider';
+include 'FL/Fl_Hor_Value_Slider.H';
+
+=pod
+
+=head1 NAME
+
+Fl::HorValueSlider - Horizontal Fl::ValueSlider widget
+
+=head1 Description
+
+The Fl::HorValueSlider draws a widget with a box displaying the current value.
+
+=for html <center><img src="http://www.fltk.org/doc-1.3/value_slider.png" /></center>
+
+=head1 Methods
+
+Fl::HorValueSlider inherits from Fl::ValueSlider, Fl::Valuator and Fl::Widget.
+On top of that, it exposes the following methods...
+
+=head2 new(...)
+
+    my $val_a = Fl::HorValueSlider->new(0, 0, 250, 500, 'Important Stuff');
+    my $val_b = Fl::HorValueSlider->new(0, 0, 250, 500);
+
+The constructor creates a new widget using the given position, size, and
+label.
+
+The default boxtype is FL_DOWN_BOX.
+
+The destructor removes the widget.
+
+=cut
+
+xs {name        => 'new',
+    definitions => [
+            {required => [[qw[int x]], [qw[int y]], [qw[int w]], [qw[int h]]],
+             optional => [['const char *', 'label', ' 0']],
+             returns  => 'Fl_Value_Slider *'
+            }
+    ]
+};
+xs {name        => 'DESTROY',
+    definitions => [{returns => 'void'}]
+};
+
+=pod
+
+=head1 LICENSE
+
+Copyright (C) Sanko Robinson.
+
+This library is free software; you can redistribute it and/or modify
+it under the same terms as Perl itself.
+
+=head1 AUTHOR
+
+Sanko Robinson E<lt>sanko@cpan.orgE<gt>
+
+=cut
