@@ -11,6 +11,7 @@ Revision history for Perl extension Fl
         - Fl::HorNiceSlider - Fl::NiceSlider but horizontal
         - Fl::HorSlider - Horizontal Fl::Slider
         - Fl::ValueSlider - Slider widget that displays the current value
+        - Fl::HorValueSlider - Horizontal Fl::ValueSlider
 
 0.99.9 2016-05-19T01:11:29Z
 
